fix issue with player survey not showing errors

--- a/src/static/src/styles/component-alert.scss
+++ b/src/static/src/styles/component-alert.scss
@@ -50,7 +50,7 @@
     background-color: $color-warning;
   }
 
-  &.alert-error {
+  &.alert-error, &.alert-danger {
     color: $color-white;
     border-color: $color-danger-dark;
     background-color: $color-danger;
